# GovTech-Camp-2026

./: .dockerignore  .gitignore  Dockerfile  Makefile  NEXT_STEPS.md  README.md  compose.yaml  pyproject.toml
data/annotations/: p1_review_template.jsonl
data/annotations/project_002_azm/: weak_findings.json
data/manifests/: file_inventory.jsonl  projects.jsonl
deploy/: api.Dockerfile  docker-compose.demo.yml  web.Dockerfile
docs/: CORPUS_INGESTION_AUDIT.md  CORPUS_INGESTION_REVERIFICATION.md  CORPUS_INGESTION_VERIFICATION.md  DALEL_Eco_Technical_Blueprint_RU.md  DATASET_PREFLIGHT_AUDIT.md  DATASET_V1_AND_P1_ACCEPTANCE.md  DATASET_V1_AND_P1_FINAL_REVERIFICATION.md  DATASET_V1_AND_P1_FIX_REPORT.md  DATASET_V1_AND_P1_REPORT.md  DATASET_V1_AND_P1_REVERIFICATION.md  DATASET_V1_AND_P1_VERIFICATION.md  DATASET_V1_IDEMPOTENCY_AUDIT.json  DATASET_V1_IMAGE_SCHEMA_FIX_REPORT.md  DATASET_V1_SCHEMA_AND_FINGERPRINT_FIX_REPORT.md  DEMO_WEBSITE.md  GovTech_Camp_Research_Report_EN.md  META_REVIEW_SCORING.md  P2_IMPLEMENTATION_REPORT.md  P2_REGULATORY_COMPLIANCE.md  P3_IMPLEMENTATION_REPORT.md  P3_QUANTITATIVE_CONSISTENCY.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/analyze/[jobId]/: page.tsx
frontend/src/app/analyze/demo/: page.tsx
frontend/src/app/analyze/demo/[jobId]/: page.tsx
frontend/src/app/analyze/live/: page.tsx
frontend/src/app/analyze/live/[jobId]/: page.tsx
frontend/src/app/methodology/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[projectId]/: page.tsx
frontend/src/app/projects/[projectId]/findings/: page.tsx
frontend/src/components/: AnalysisPipeline.tsx  AnalysisResult.tsx  CoherenceView.tsx  CoverageMatrix.tsx  DocumentsTable.tsx  DossierBuilder.tsx  EvidenceDrawer.tsx  FindingsExplorer.tsx  LiveAnalysisPipeline.tsx  LiveAnalysisResult.tsx  LiveDossierBuilder.tsx  LiveVisualEvidence.tsx  MetaAssessmentView.tsx  PillarCard.tsx  PipelineSteps.tsx  PreparedDossierView.tsx  ProjectCard.tsx  ReportModal.tsx  SiteFooter.tsx  SiteHeader.tsx  StatCard.tsx  VisualEvidenceView.tsx  primitives.tsx
frontend/src/lib/: api.ts  jobTokens.ts  markdown.tsx  types.ts  ui.ts  useApi.ts  useLiveJob.ts  useReducedMotion.ts
notebooks/: 01_ingestion_audit.ipynb  01_ingestion_audit_executed.ipynb
scripts/: validate_dataset_foundation.py  verify_corpus_ingestion.py
src/dalel/: __init__.py  __main__.py  cli.py  config.py
src/dalel/api/: __init__.py  app.py  body_limit.py  config.py  demo.py  dossier.py  errors.py  job_store.py  live.py  live_processing.py  p5_service.py  repository.py  schemas.py  services.py  visual_triage.py
src/dalel/api/demo_manifests/: project_003_bayterek.json
src/dalel/api/routes/: demo.py  findings.py  health.py  live.py  p5.py  projects.py  reports.py  system.py
src/dalel/curation/: __init__.py  builder.py  checksums.py  normalization.py  provenance.py  reports.py  schema_contract.py  schemas.py  splits.py  validation.py
src/dalel/ingestion/: __init__.py  docling_parser.py  docx_fallback.py  hashing.py  image_extractor.py  parsed.py  pdf_mode.py  pipeline.py  pymupdf_fallback.py  reports.py  routing.py  storage.py  validation.py
src/dalel/meta_review/: __init__.py  artifacts.py  calibration.py  config.py  coverage.py  explainability.py  features.py  pipeline.py  reports.py  schemas.py  scoring.py  validation.py
src/dalel/pillars/: __init__.py
src/dalel/pillars/cross_document_coherence/: __init__.py  checks.py  config.py  entity_resolution.py  extractor.py  graph.py  input_contract.py  normalization.py  pipeline.py  reports.py  schemas.py  scoring.py  validation.py
src/dalel/pillars/document_integrity/: __init__.py  config.py  document_completeness.py  normalization.py  package_completeness.py  pipeline.py  quality.py  reports.py  schemas.py  scoring.py  section_matcher.py  taxonomy.py
src/dalel/pillars/multimodal_visual_evidence/: __init__.py  assets.py  checks.py  classification.py  config.py  context.py  embeddings.py  input_contract.py  ocr.py  pipeline.py  reports.py  schemas.py  scoring.py  validation.py
src/dalel/pillars/quantitative_consistency/: __init__.py  aggregations.py  comparisons.py  config.py  extractor.py  input_contract.py  matcher.py  normalization.py  number_parser.py  pipeline.py  reports.py  resolution.py  schemas.py  scoring.py  semantic_context.py  units.py  validation.py
src/dalel/pillars/regulatory_compliance/: __init__.py  assessment.py  config.py  corpus.py  evidence.py  nli.py  normalization.py  pipeline.py  prompts.py  providers.py  reports.py  retrieval.py  schemas.py  scoring.py  validation.py
src/dalel/pillars/regulatory_compliance/resources/: demo_regulatory_corpus.jsonl
src/dalel/schemas/: __init__.py  document.py  evidence.py  image.py  manifest.py  page.py  table.py
tests/: conftest.py
tests/fixtures/: builders.py  curation_builders.py  meta_builders.py  p2_builders.py  p3_builders.py  p4_builders.py
tests/integration/: test_docling_integration.py
tests/unit/: test_api.py  test_cli.py  test_curation.py  test_demo_dossier.py  test_docx_fallback.py  test_fingerprint.py  test_hashing.py  test_live_analysis.py  test_live_security.py  test_manifest_schema.py  test_meta_review.py  test_ocr_unavailable.py  test_p1.py  test_p2.py  test_p3.py  test_p3_audit2_regressions.py  test_p3_audit_regressions.py  test_p3_parsing.py  test_p4.py  test_p5_visual_evidence.py  test_pdf_mode.py  test_pipeline.py  test_real_manifest.py  test_routing.py  test_schema_contract.py  test_storage.py  test_table_validity.py  test_validation.py
