[project]
name = "dalel"
version = "0.1.0"
description = "DALEL Eco - Phase 0 local document ingestion for environmental permit documentation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Proprietary" }
dependencies = [
    "docling>=2.28,<3",
    "easyocr>=1.7",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.scripts]
dalel = "dalel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dalel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not integration' -q"
markers = [
    "slow: tests that are slow to run (model loading, OCR)",
    "integration: tests that exercise real Docling/OCR pipelines and may download models",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# scripts/ holds pre-existing audit artifacts that must stay byte-stable.
extend-exclude = ["notebooks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "SIM108", # ternary is not always clearer
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["dalel"]
strict = false
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pymupdf",
    "pymupdf.*",
    "docx",
    "docx.*",
    "docling.*",
    "docling_core.*",
    "easyocr",
    "PIL",
    "PIL.*",
]
ignore_missing_imports = true
