[project]
name = "dalel"
version = "0.1.0"
description = "DALEL Eco - Phase 0 local document ingestion for environmental permit documentation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Proprietary" }
dependencies = [
    "docling>=2.28,<3",
    "easyocr>=1.7",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
    "jsonschema>=4.21",
]

[project.scripts]
dalel = "dalel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Demo website API layer (src/dalel/api). Kept in its own group so the
# core ingestion/pillar package has no web dependency; installed by
# default for developer convenience via [tool.uv] default-groups below.
api = [
    "fastapi>=0.110",
    # Job-local curation re-validates every record against the dataset schema
    # contract before a live dataset is accepted (curation/schema_contract.py).
    "jsonschema>=4.21",
    "pillow>=10",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.29",
]
# P5 multimodal visual evidence: pinned open-source vision-language encoder
# (OpenCLIP xlm-roberta-base-ViT-B-32 / laion5b_s13b_b90k, MIT-licensed code
# and weights, CPU inference) plus EasyOCR for visual-text extraction. Kept in
# its own group so the lean API image can opt in explicitly; the Docker image
# installs api+p5 with the CPU-only torch wheel pinned below.
p5 = [
    "open-clip-torch>=3.3,<4",
    "easyocr>=1.7",
    "pillow>=10",
    # open_clip's xlm-roberta text tower is an HFTextEncoder: transformers is
    # a hard runtime requirement of the pinned model but only an optional
    # extra of open-clip-torch, so it must be declared here explicitly (the
    # Docker image installs only api+p5, without the docling group that used
    # to pull it in transitively).
    "transformers>=4.49,<6",
    # Explicit so the pytorch-cpu index pin below applies (uv sources only
    # bind to declared dependencies, not transitive ones).
    "torch>=2.5",
    "torchvision>=0.20",
]

[tool.uv]
default-groups = ["dev", "api", "p5"]

# Docker (linux) must never pull CUDA torch wheels: the vision backend is
# CPU-only by design. macOS keeps the default PyPI wheels (already CPU/MPS).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dalel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not integration' -q"
markers = [
    "slow: tests that are slow to run (model loading, OCR)",
    "integration: tests that exercise real Docling/OCR pipelines and may download models",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# scripts/ holds pre-existing audit artifacts that must stay byte-stable.
extend-exclude = ["notebooks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "SIM108", # ternary is not always clearer
    # Russian-language user-facing strings (findings, taxonomy, reports) are
    # first-class in this project; Cyrillic confusable warnings are noise.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["dalel"]
strict = false
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pymupdf",
    "pymupdf.*",
    "docx",
    "docx.*",
    "docling.*",
    "docling_core.*",
    "jsonschema",
    "jsonschema.*",
    "easyocr",
    "PIL",
    "PIL.*",
    "open_clip",
    "open_clip.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true
